Creacion de pagina home para usuarios, modal de inicio de sesion y estilos

--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -509,6 +509,11 @@ nav a {
 
 }
 
+.resumen{
+    padding: 5px;
+    font-style: italic;
+}
+
 .cerrar{
     float: right;
     background-color: #8F6EAA;
