--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -65,7 +65,7 @@ p {
 
 
 .menu-desktop{
-    margin-top:250px;
+    margin-top:150px;
 }
 
 .menu-desktop ul li{
@@ -80,7 +80,6 @@ p {
     font-size: 0.9em !important;
 
 }
-
 
 .activo{
     color: #69b8d7 !important;
@@ -239,6 +238,19 @@ nav a {
 
 }
 
+.ingresar {
+  font-size: 0.8rem;
+  padding-left:3%;
+  display:inline-block;
+}
+
+.iconmenu{
+  position: relative;
+  font-size: 2rem;
+  padding-right:3%;
+  display:inline-block;
+}
+
 .user{
     color: #2157A1 !important;
     text-transform: uppercase;
@@ -305,7 +317,7 @@ nav a {
     left: 20px;
     text-transform: uppercase;
     color:inherit;
-    font-size: 1.1em;
+    font-size: 1rem;
     padding-top: 20px;
 
 }
@@ -334,6 +346,17 @@ nav a {
     color: #8F6EAA !important;
     background-color: #f2f2f2;
     padding: 10px;
+}
+
+.registro{
+  padding: 5px;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+}
+
+.registro a{
+  color: #8F6EAA !important;
+  padding: 10px;
 }
 
 .leer-mas{
@@ -445,6 +468,7 @@ nav a {
 .ff{
     background-color: #0b1f5b !important;
     font-size: .8rem;
+    bottom: 0;
 
 }
 
@@ -468,8 +492,9 @@ nav a {
 
 .collapsiblemod {
     cursor: pointer;
-    padding: 18px;
+    padding: 10px !important;
     width: 100%;
+    height: 150px;
     border: none;
     text-align: left;
     outline: none;
@@ -519,6 +544,9 @@ nav a {
     background-color: #8F6EAA;
     padding: 5px;
     position: relative;
+    right: -.75rem;
+    width: 4%;
+    text-align: center;
 }
 
 .titulo-funciona{
