CAmbio de estilos menu activo, cambios en script.js para los modulos de los cursos

--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -82,9 +82,9 @@ p {
 }
 
 .activo{
-    color: #69b8d7 !important;
+    color: #BCBC1C!important;
     text-decoration: underline;
-    text-decoration-color: #69b8d7;
+    text-decoration-color: #BCBC1C;
 }
 
 .line{
