--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -225,6 +225,17 @@ nav a {
 
 }
 
+
+.iconcourseshow {
+    position: relative;
+    font-size: 2rem;
+    top:0px;
+    right: 0%;
+    width: 10%;
+    display: inline-block;
+
+}
+
 .iconmodule {
     font-size: 1.5rem;
     display: inline-block;
@@ -418,7 +429,7 @@ nav a {
 
 .moduloslista {
     padding: 5px 0 5px 0;
-    height: 200px
+    height: 200px;
 }
 
 .leer-masmodulos {
