--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -653,6 +653,10 @@ nav a {
   color: #8F6EAA;
 }
 
+i.material-icons.prefix.active{
+  background-color: inherit;
+}
+
 
 /* media query */
 @media only screen and (max-width: 992px) {
