--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -80,6 +80,18 @@ p {
     font-size: 0.9em !important;
 
 }
+.menu-mobile ul li{
+    font-weight: 800;
+    text-transform: uppercase;
+    padding-left: 40px;
+}
+
+.menu-mobile ul li a{
+    color: #4a62ae;
+    font-size: 0.9em !important;
+
+}
+
 
 .activo{
     color: #BCBC1C!important;
@@ -89,6 +101,12 @@ p {
 
 .line{
     border: 0.5px solid #2157A1;
+}
+
+.linem{
+    border: 0.5px solid #2157A1;
+    width: 60%;
+    padding-left: 20%;
 }
 
 .line2{
@@ -299,7 +317,7 @@ nav a {
 }
 
 #mobile-demo {
-    margin-top: 98px;
+    margin-top: 107px;
 }
 /*******************/
 
@@ -720,6 +738,24 @@ i.material-icons.prefix.active{
         max-width: none !important;
         min-width: none !important;
     }
+
+    .side-nav{
+      width: 100%;
+      background-color: #f9f9f9;
+    }
+
+    #sidenav-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 120vh;
+    background-color: rgba(0,0,0,0);
+    z-index: 997;
+    will-change: opacity;
+}
+
+
 }
 
 
@@ -784,6 +820,19 @@ i.material-icons.prefix.active{
 .aprender-mas{
     text-align: center;
     }
+.cerrarModal {
+    float: right;
+    background-color: #8F6EAA;
+    padding: 5px;
+    position: relative;
+    width: 10%;
+    text-align: center;
+    right: 0px;
+}
 
+.modal#modalMod{
+  width: 100%;
+  max-width: 100%;
+}
 
 }
