2 paginas de certificados pdf y se agrego el toast para mensajes

--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -380,6 +380,13 @@ nav a {
     color: #000;
 }
 
+.acept{
+  background-color: #8F6EAA;
+}
+
+.error{
+  background-color:#e57373;
+}
 /******************/
 
 
