Cambios de funcion ajax y creacion de modal, cambios de estilos en img mods

--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -302,6 +302,10 @@ a.links{
 
 }
 
+.moduleimg{
+  background-color: #8F6EAA;
+}
+
 .iconmodule {
     font-size: 1.5rem;
     display: inline-block;
