Modificacion de paginas modal login y regristrese

--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -292,6 +292,18 @@ a.links{
   cursor: pointer;
 }
 
+.upscase{
+  text-transform: uppercase;
+}
+
+.smalltext{
+  font-size: .8rem;
+}
+
+.consulta{
+  padding: 10px;
+}
+
 .iconcourseshow {
     position: relative;
     font-size: 2rem;
