--- a/public/css/styles_users_pages/materialize.css
+++ b/public/css/styles_users_pages/materialize.css
@@ -4422,32 +4422,32 @@ nav .input-field label.active i {
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: local(Roboto Thin), url("../fonts/roboto/Roboto-Thin.woff2") format("woff2"), url("../fonts/roboto/Roboto-Thin.woff") format("woff");
+  font-family: "Lato";
+  src: local(Lato Thin), url("../fonts/Lato/Lato-Hairline.ttf") format("ttf");
   font-weight: 100;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: local(Roboto Light), url("../fonts/roboto/Roboto-Light.woff2") format("woff2"), url("../fonts/roboto/Roboto-Light.woff") format("woff");
+  font-family: "Lato";
+  src: local(Lato Light), url("../fonts/Lato/Lato-Light.ttf") format("ttf");
   font-weight: 300;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: local(Roboto Regular), url("../fonts/roboto/Roboto-Regular.woff2") format("woff2"), url("../fonts/roboto/Roboto-Regular.woff") format("woff");
+  font-family: "Lato";
+  src: local(Lato Regular),  url("../fonts/Lato/Lato-Regular.ttf") format("ttf");
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: local(Roboto Medium), url("../fonts/roboto/Roboto-Medium.woff2") format("woff2"), url("../fonts/roboto/Roboto-Medium.woff") format("woff");
+  font-family: "Lato";
+  src: local(Lato Medium),  url("../fonts/Lato/Lato-Black.ttf") format("ttf");
   font-weight: 500;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: local(Roboto Bold), url("../fonts/roboto/Roboto-Bold.woff2") format("woff2"), url("../fonts/roboto/Roboto-Bold.woff") format("woff");
+  font-family: "Lato";
+  src: local(Lato Bold),  url("../fonts/Lato/Lato-Bold.ttf") format("ttf");
   font-weight: 700;
 }
 
