--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -4,6 +4,7 @@
   --main-font-btn-color: #8F6EAA;
   --main-bg-btn-color: #f2f2f2;
   --main-sub-a-color: #BCBC1C;
+  --second-font-color: #596066;
 
 }
 
@@ -243,7 +244,13 @@ a.links{
     text-transform: uppercase;
 
 }
-
+.tits{
+  font-weight: 600;
+  text-align: left;
+  color: var(--main-font-color) !important;
+  text-transform: uppercase;
+  margin-top: 0 !important;
+}
 .recientes{
     letter-spacing: 1px;
     font-weight: 600;
@@ -364,15 +371,7 @@ a.links{
     padding: 10px;
 }
 
-.categoria-evaluacion{
-    color:#596066;
-    text-transform: uppercase;
-    font-size: 0.8em;
-    font-weight: 600;
-    display: inline-block;
-    position: relative;
-    right: 0;
-}
+
 
 #references{
   margin-bottom: 15px;
@@ -413,14 +412,24 @@ a.links{
     width: 60%;
     text-transform: uppercase;
     text-align:right;
-    color:#596066;
+    color: var(--second-font-color);
     font-size: 0.8em;
     font-weight: 600;
     display: inline-block;
 }
 
+.categoria-evaluacion{
+    color: var(--second-font-color);
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: 600;
+    display: inline-block;
+    position: relative;
+    right: 0;
+}
+
 .categoria-modulos {
-    color:#596066;
+    color: var(--second-font-color);
     text-transform: uppercase;
     font-size: 0.8em;
     font-weight: 600;
@@ -476,16 +485,23 @@ a.links{
 }
 
 .aprender-mas a{
-    color: #8F6EAA !important;
+    color: var(--main-font-btn-color) !important;
     background-color: #f2f2f2;
     padding: 10px;
+}
+
+.textMods{
+  color: var(--main-font-btn-color) !important;
+  text-transform: uppercase;
+  text-align: left;
+  font-weight: 500;
 }
 
 .btnAcademia{
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
   appearance: none !important;
-  color: #8F6EAA !important;
+  color: var(--main-font-btn-color) !important;
   background-color: var(--main-bg-btn-color);
   padding: 10px;
   text-transform: uppercase;
