--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -564,6 +564,19 @@ a.linkM{
   background-color: #fff !important;
 }
 
+.btnAcademiaFloat {
+  position: fixed;
+  bottom: 200px;
+  right: 50px;
+  padding: 10px;
+  background-color: var(--main-font-btn-color) !important;
+  color: var(--main-bg-btn-color);
+}
+
+.btnAcademiaFloat:hover{
+  color: var(--btn-hover-color) !important;
+  background-color: var(--btn-hover-color) !important;
+}
 
 .registro{
   padding: 5px;
@@ -730,9 +743,20 @@ a.linkM{
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+
     color: var(--main-font-color);
 }
+
+.modOut{
+  padding: 10px !important;
+  width: 100%;
+  height: 150px;
+  border: none;
+  text-align: left;
+  outline: none;
+  color: var(--main-font-color);
+}
+
 
 .activeMod, .collapsiblemod:hover {
     background-color: var(--btn-hover-color);
