--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -1030,7 +1030,7 @@ i.material-icons.prefix.active{
   }
 
   h2{
-      font-size: 18px !important;
+      font-size: 16px !important;
       text-transform: uppercase;
       font-weight: bold;
   }
@@ -1110,5 +1110,15 @@ img.responsive-img {
   font-size: 12px;
   color: var(--main-select-font-color);
 }
+
+.categoria-modulos {
+
+    font-size: 8px;
+
+}
+
+.iconcourseshow {
+
+    width: 4%;
 
 }
